Fix: Arquitetura da aplicação

--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "@server": "./src/server",
     "@services": "./src/services",
     "@utils": "./src/utils",
-    "@controllers": "./src/app/controllers"
+    "@controllers": "./src/controllers"
   }
 }
