--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.5",
     "query-string": "^7.0.1"
   },
